feat: improve error when loading biomes